# flipkart-scraper

./: Cargo.toml  README.md  output.html
examples/product_details/: Cargo.toml
examples/product_details/src/: main.rs
examples/search_product/: Cargo.toml
examples/search_product/src/: main.rs
src/: lib.rs  main.rs  star_base64_svg
src/product_details/: mod.rs  offer.rs  product.rs  seller.rs  specs.rs
src/search/: search.rs
