[package]
name = "flipkart_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.8"
reqwest = "0.11.22"
scraper = "0.17.1"
tokio = { version = "1.32.0", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.4.1"
